DXLIB_v4.6/DXLIB/dxlib.py


_dxlib.DXL_GetPresentCurrents.argtypes = [c_void_p, POINTER(c_uint8), POINTER(c_double), c_int]
_dxlib.DXL_GetPresentCurrents.restype  = c_bool
def DXL_GetPresentCurrents(dvid,ids,currents,num):
  return _dxlib.DXL_GetPresentCurrents(dvid,ids,currents,num)

# DXL PWM
#----------------------------
_dxlib.DXL_SetGoalPWM.argtypes = [c_void_p, c_uint8, c_double]
_dxlib.DXL_SetGoalPWM.restype  = c_bool
def DXL_SetGoalPWM(dvid,id,pwm):
  return _dxlib.DXL_SetGoalPWM(dvid,id,pwm)

_dxlib.DXL_SetGoalPWMs.argtypes = [c_void_p, POINTER(c_uint8), POINTER(c_double), c_int]
_dxlib.DXL_SetGoalPWMs.restype  = c_bool
def DXL_SetGoalPWMs(dvid,ids,pwms,num):
  return _dxlib.DXL_SetGoalPWMs(dvid,ids,pwms,num)

_dxlib.DXL_GetPresentPWM.argtypes = [c_void_p, c_uint8, POINTER(c_double)]
_dxlib.DXL_GetPresentPWM.restype  = c_bool
def DXL_GetPresentPWM(dvid,id,pwm):
  return _dxlib.DXL_GetPresentPWM(dvid,id,pwm)

_dxlib.DXL_GetPresentPWMs.argtypes = [c_void_p, POINTER(c_uint8), POINTER(c_double), c_int]
_dxlib.DXL_GetPresentPWMs.restype  = c_bool
def DXL_GetPresentPWMs(dvid,ids,pwms,num):
  return _dxlib.DXL_GetPresentPWMs(dvid,ids,pwms,num)

# DXL Drive Mode
#----------------------------
_dxlib.DXL_SetDriveMode.argtypes = [c_void_p, c_uint8, c_uint8]
_dxlib.DXL_SetDriveMode.restype  = c_bool
def DXL_SetDriveMode(dvid,id,mode):
  return _dxlib.DXL_SetDriveMode(dvid,id,mode)

_dxlib.DXL_SetDriveModesEquival.argtypes = [c_void_p, POINTER(c_uint8), c_int, c_uint8]
_dxlib.DXL_SetDriveModesEquival.restype  = c_bool
def DXL_SetDriveModesEquival(dvid,ids,num,mode):
  return _dxlib.DXL_SetDriveModesEquival(dvid,ids,num,mode)

# DXL OP Mode
#----------------------------
_dxlib.DXL_SetOperatingMode.argtypes = [c_void_p, c_uint8, c_uint8]
_dxlib.DXL_SetOperatingMode.restype  = c_bool
def DXL_SetOperatingMode(dvid,id,mode):
  return _dxlib.DXL_SetOperatingMode(dvid,id,mode)

_dxlib.DXL_SetOperatingModesEquival.argtypes = [c_void_p, POINTER(c_uint8), c_int, c_uint8]
_dxlib.DXL_SetOperatingModesEquival.restype  = c_bool
def DXL_SetOperatingModesEquival(dvid,ids,num,mode):
  return _dxlib.DXL_SetOperatingModesEquival(dvid,ids,num,mode)

_dxlib.DXL_GetOperatingMode.argtypes = [c_void_p, c_uint8, POINTER(c_uint8)]
_dxlib.DXL_GetOperatingMode.restype  = c_bool
def DXL_GetOperatingMode(dvid,id,mode):
  return _dxlib.DXL_GetOperatingMode(dvid,id,mode)

# DXL Error
#----------------------------
_dxlib.DXL_GetErrorCode.argtypes = [c_void_p, c_uint8]
_dxlib.DXL_GetErrorCode.restype  = c_uint16
def DXL_GetErrorCode(dvid,id):
  return _dxlib.DXL_GetErrorCode(dvid,id)

_dxlib.DXL_GetHWErrorCode.argtypes = [c_void_p, c_uint8, POINTER(c_uint8)]
_dxlib.DXL_GetHWErrorCode.restype  = c_bool
def DXL_GetHWErrorCode(dvid,id,hwerr):
  return _dxlib.DXL_GetHWErrorCode(dvid,id,hwerr)

# DXL Model Info
#----------------------------
_dxlib.DXL_GetModelInfo.argtypes = [c_void_p, c_uint8]
_dxlib.DXL_GetModelInfo.restype  = POINTER(TDXL_ModelInfo)
def DXL_GetModelInfo(dvid,id):
  return _dxlib.DXL_GetModelInfo(dvid,id)

_dxlib.DXL_ScanDevices.argtypes = [c_void_p, POINTER(c_uint8)]
_dxlib.DXL_ScanDevices.restype  = c_int
def DXL_ScanDevices(dvid,ids):
  return _dxlib.DXL_ScanDevices(dvid,ids)

_dxlib.DXL_PrintDevicesList.argtypes = [c_void_p]
_dxlib.DXL_PrintDevicesList.restype  = c_bool
def DXL_PrintDevicesList(f):
  return _dxlib.DXL_PrintDevicesList(f)

_dxlib.DXL_InitDevicesList.argtypes = (None)
_dxlib.DXL_InitDevicesList.restype  = (None)
def DXL_InitDevicesList():
  _dxlib.DXL_InitDevicesList()
